# Line-Following-Robot

./: CMakeCache.txt  CMakeLists.txt  README.md  W6IMU copy.c  W6IMU.c  W6IMU_SMAEMA.c  W6IMU_converted.c  W6IMUbase.c  build.ninja  cmake_install.cmake  csv_data.py  data.csv  encoder.h  finalmain.c  main.c  main_test.c  pid.c  test.txt  test_motor_pid.c  test_motor_pid.h  totest_wCaliAndFilt.c
Ultrasonic/: main.c  (+2 more)
UltrasonicNew/: CMakeLists.txt  avoidance_maneuver.c  avoidance_maneuver.h  imu_helper.c  imu_helper.h  lwipopts.h  main.c  obstacle_scanner.c  obstacle_scanner.h  servo.h  telemetry.c  telemetry.h  ultrasonic.h
test/: CMakeLists.txt
test/integration_test/: INTEG_T1.c  INTEG_T2.c  INTEG_T3.c  INTEG_T4.c  INTEG_T4_sim.c  INTEG_T5.c  heading_keeping.c  heading_keeping_sim.c  telemetry_obstacle.c
test/pico-sdk/: cmake_install.cmake
test/pico-sdk/docs/: cmake_install.cmake
test/pico-sdk/src/: cmake_install.cmake
test/pico-sdk/src/common/boot_picobin_headers/: cmake_install.cmake
test/pico-sdk/src/common/boot_picoboot_headers/: cmake_install.cmake
test/pico-sdk/src/common/boot_uf2_headers/: cmake_install.cmake
test/pico-sdk/src/common/hardware_claim/: cmake_install.cmake
test/pico-sdk/src/common/pico_base_headers/: cmake_install.cmake
test/pico-sdk/src/common/pico_binary_info/: cmake_install.cmake
test/pico-sdk/src/common/pico_bit_ops_headers/: cmake_install.cmake
test/pico-sdk/src/common/pico_divider_headers/: cmake_install.cmake
test/pico-sdk/src/common/pico_stdlib_headers/: cmake_install.cmake
test/pico-sdk/src/common/pico_sync/: cmake_install.cmake
test/pico-sdk/src/common/pico_time/: cmake_install.cmake
test/pico-sdk/src/common/pico_usb_reset_interface_headers/: cmake_install.cmake
test/pico-sdk/src/common/pico_util/: cmake_install.cmake
test/pico-sdk/src/rp2040/boot_stage2/: cmake_install.cmake
test/pico-sdk/src/rp2040/hardware_regs/: cmake_install.cmake
test/pico-sdk/src/rp2040/hardware_structs/: cmake_install.cmake
test/pico-sdk/src/rp2040/pico_platform/: cmake_install.cmake
test/pico-sdk/src/rp2_common/boot_bootrom_headers/: cmake_install.cmake
test/pico-sdk/src/rp2_common/cmsis/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_adc/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_base/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_boot_lock/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_clocks/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_divider/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_dma/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_exception/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_flash/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_gpio/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_i2c/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_interp/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_irq/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_pio/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_pll/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_pwm/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_resets/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_rtc/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_spi/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_sync/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_sync_spin_lock/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_ticks/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_timer/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_uart/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_vreg/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_watchdog/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_xip_cache/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_xosc/: cmake_install.cmake
test/pico-sdk/src/rp2_common/pico_aon_timer/: cmake_install.cmake
test/pico-sdk/src/rp2_common/pico_async_context/: cmake_install.cmake
test/pico-sdk/src/rp2_common/pico_atomic/: cmake_install.cmake
test/pico-sdk/src/rp2_common/pico_bit_ops/: cmake_install.cmake
test/pico-sdk/src/rp2_common/pico_bootrom/: cmake_install.cmake
test/pico-sdk/src/rp2_common/pico_bootsel_via_double_reset/: cmake_install.cmake
test/pico-sdk/src/rp2_common/pico_btstack/: cmake_install.cmake
test/pico-sdk/src/rp2_common/pico_clib_interface/: cmake_install.cmake
test/pico-sdk/src/rp2_common/pico_crt0/: cmake_install.cmake
test/pico-sdk/src/rp2_common/pico_cxx_options/: cmake_install.cmake
test/pico-sdk/src/rp2_common/pico_cyw43_arch/: cmake_install.cmake
test/pico-sdk/src/rp2_common/pico_cyw43_driver/: cmake_install.cmake
test/pico-sdk/src/rp2_common/pico_divider/: cmake_install.cmake
test/pico-sdk/src/rp2_common/pico_double/: cmake_install.cmake
test/pico-sdk/src/rp2_common/pico_fix/: cmake_install.cmake
test/pico-sdk/src/rp2_common/pico_flash/: cmake_install.cmake
test/pico-sdk/src/rp2_common/pico_float/: cmake_install.cmake
test/pico-sdk/src/rp2_common/pico_i2c_slave/: cmake_install.cmake
test/pico-sdk/src/rp2_common/pico_int64_ops/: cmake_install.cmake
test/pico-sdk/tools/: cmake_install.cmake
test/unit_test/: CMakeCache.txt  IMU_GRAPHS.py  IMU_T1.c  IMU_T2.c  IMU_T3.c  IMU_T4.c  IMU_T5.c  IR_T1.c  IR_T2.c  IR_T3.c  IR_T4.c  MOTOR_T1-5.c  MOTOR_T1.c  MOTOR_T2.c  MOTOR_T3.c  MOTOR_T4.c  MOTOR_T5.c  MOTOR_T6-7.c  MOTOR_T6.c  MOTOR_T7.c  MOTOR_TC_sim.c  OBS_T1.c  OBS_T2.c  OBS_T3.c  OBS_T4.c  OBS_T5.c  OBS_T6.c  OBS_T7.c  OBS_T8.c  OBS_T9.c  TELEMETRY_T1.c  TELEMETRY_T10.c  TELEMETRY_T2.c  TELEMETRY_T3.c  TELEMETRY_T4.c  TELEMETRY_T5.c  TELEMETRY_T6.c  TELEMETRY_T7.c  TELEMETRY_T8.c  TELEMETRY_T9.c  (+6 more)
test/unit_test/pico-sdk/: cmake_install.cmake
test/unit_test/pico-sdk/docs/: cmake_install.cmake
test/unit_test/pico-sdk/src/: cmake_install.cmake
test/unit_test/pico-sdk/tools/: cmake_install.cmake
(+303 files in other folders)
